Added color adjustments

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -461,7 +461,7 @@ button {
   cursor: default !important;
 }
 
-div.chatbot-input.border:focus {
+div.chatbot-input.border {
   border-color: #f59e0b !important;
 }
 
